# iris-classification-bentoml

./: .gitignore  Dockerfile  README.md  model.py  pyproject.toml  service.py
.github/: pipeline_python.yaml
.github/workflows/: pipeline_docker.yaml  pipeline_python.yaml
bentoml/: bentofile.yaml
docker/: Dockerfile
src/: main.py
src/config/: config.py
src/data/: data_loader.py  data_preprocessor.py
src/models/: interfaces.py  iris_model.py  model_factory.py
src/services/: interfaces.py  iris_service.py
