[tool.poetry]
name = "pack-bentoml"
version = "0.1.0"
description = ""
authors = ["Nathan Souza <naathanmarinho11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bentoml = "^1.2.19"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
